[package]
name = "iokit"
description = "Bindings to IOKit for macOS"
homepage = "https://github.com/jtakakura/iokit-rs"
repository = "https://github.com/jtakakura/iokit-rs"
version = "0.1.0"
authors = ["Junji Takakura <j.takakura@gmail.com>"]
license = "MIT"
build = "build.rs"

[dependencies]
core-foundation = "0.4"
core-foundation-sys = "0.4"
libc = "0.2"
