[package]
name = "io-kit-sys"
description = "Bindings to IOKit for macOS"
homepage = "https://github.com/jtakakura/io-kit-rs"
repository = "https://github.com/jtakakura/io-kit-rs"
version = "0.2.0"
authors = ["Junji Takakura <j.takakura@gmail.com>"]
license = "MIT / Apache-2.0"
build = "build.rs"
edition = "2018"

[dependencies]
core-foundation-sys = "0.8.3"
mach="0.3.2"
