[package]
name = "io-kit"
description = "Bindings to IOKit for macOS"
homepage = "https://github.com/jtakakura/io-kit-rs"
repository = "https://github.com/jtakakura/io-kit-rs"
version = "0.1.0"
authors = ["Junji Takakura <j.takakura@gmail.com>"]
license = "MIT / Apache-2.0"

[dependencies.io-kit-sys]
path = "../io-kit-sys"
version = "0.1.0"

[dependencies]
core-foundation = "0.6"
core-foundation-sys = "0.6"
mach="0.2"
