[package]
name = "io-kit"
description = "Bindings to IOKit for macOS"
homepage = "https://github.com/jtakakura/io-kit-rs"
repository = "https://github.com/jtakakura/io-kit-rs"
version = "0.1.0"
authors = ["Junji Takakura <j.takakura@gmail.com>"]
license = "MIT / Apache-2.0"
edition = "2018"

[dependencies.io-kit-sys]
path = "../io-kit-sys"
version = "0.2.0"

[dependencies]
core-foundation = "0.9.3"
mach2="0.4.1"
