[package]
name = "io-kit"
version = "0.1.0"

description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
core-foundation = "0.10"
io-kit-sys = { workspace = true }
mach2 = { workspace = true }
